--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -22979,7 +22979,18 @@ times</property>
 	  </child>
 
 	  <child>
-	    <placeholder/>
+	    <widget class="GtkProgressBar" id="progressbar">
+	      <property name="visible">True</property>
+	      <property name="orientation">GTK_PROGRESS_LEFT_TO_RIGHT</property>
+	      <property name="fraction">0</property>
+	      <property name="pulse_step">0.10000000149</property>
+	      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+	    </widget>
+	    <packing>
+	      <property name="padding">0</property>
+	      <property name="expand">False</property>
+	      <property name="fill">False</property>
+	    </packing>
 	  </child>
 	</widget>
 	<packing>
